@@ -11,7 +11,10 @@
  * Signature: ()J
  */
 JNIEXPORT jlong JNICALL Java_com_muscat_om_OmDocumentContents_createNativeObject
-  (JNIEnv *, jobject);
+  (JNIEnv *env, jobject obj)
+{
+    return (jlong) new OmDocumentContents();
+}
 
 /*
  * Class:     com_muscat_om_OmDocumentContents
@@ -19,7 +22,10 @@ JNIEXPORT jlong JNICALL Java_com_muscat_om_OmDocumentContents_createNativeObject
  * Signature: ()V
  */
 JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_deleteNativeObject
-  (JNIEnv *, jobject);
+  (JNIEnv *env, jobject obj)
+{
+    delete (OmDocumentContents *) tryGetLongField(env, obj, "nativePtr");
+}
 
 /*
  * Class:     com_muscat_om_OmDocumentContents
@@ -27,7 +33,14 @@ JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_deleteNativeObject
  * Signature: (Ljava/lang/String;)V
  */
 JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_set_1data
-  (JNIEnv *, jobject, jstring);
+  (JNIEnv *env, jobject obj, jstring data)
+{
+    OmDocumentContents *contents = (OmDocumentContents *)tryGetLongField(env, obj, "nativePtr");
+
+    std::string data_n = getStringValue(env, data);
+
+    contents->data.value = data_n;
+}
 
 /*
  * Class:     com_muscat_om_OmDocumentContents
@@ -35,7 +48,14 @@ JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_set_1data
  * Signature: (ILjava/lang/String;)V
  */
 JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_add_1key
-  (JNIEnv *, jobject, jint, jstring);
+  (JNIEnv *env, jobject obj, jint keyno, jstring value)
+{
+    OmDocumentContents *contents = (OmDocumentContents *)tryGetLongField(env, obj, "nativePtr");
+
+    std::string value_n = getStringValue(env, value);
+
+    contents->keys[(om_keyno)keyno] = value_n;
+}
 
 /*
  * Class:     com_muscat_om_OmDocumentContents
@@ -43,7 +63,14 @@ JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_add_1key
  * Signature: (Ljava/lang/String;I)V
  */
 JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_add_1posting
-  (JNIEnv *, jobject, jstring, jint);
+  (JNIEnv *env, jobject obj, jstring tname, jint tpos)
+{
+    OmDocumentContents *contents = (OmDocumentContents *)tryGetLongField(env, obj, "nativePtr");
+
+    std::string tname_n = getStringValue(env, tname);
+
+    contents->add_posting(tname_n, (om_termpos)tpos);
+}
 
 /*
  * Class:     com_muscat_om_OmDocumentContents
@@ -51,4 +78,14 @@ JNIEXPORT void JNICALL Java_com_muscat_om_OmDocumentContents_add_1posting
  * Signature: ()Ljava/lang/String;
  */
 JNIEXPORT jstring JNICALL Java_com_muscat_om_OmDocumentContents_get_1description
-  (JNIEnv *, jobject);
+  (JNIEnv *env, jobject obj)
+{
+    OmDocumentContents* contents = (OmDocumentContents*) tryGetLongField (env, obj, "nativePtr");
+    try {
+	return env->NewStringUTF (contents->get_description().c_str());
+    }
+    catch (OmError& err) {
+	handleNativeError (env, err);
+    }
+    return NULL;
+}
